--- a/styles/antd-custom.less
+++ b/styles/antd-custom.less
@@ -1,6 +1,6 @@
 @import '~antd/lib/style/themes/default.less';
 
-@primary-color: #28439d; // primary color for all components
+@primary-color: #006fee; // primary color for all components
 @link-color: #6aa1d1; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
@@ -11,8 +11,8 @@
 @heading-color: rgb(0, 0, 0); // heading text color
 @text-color: rgb(0, 0, 0); // major text color
 @text-color-secondary: rgba(0, 0, 0, 0.66); // secondary text color
-@disabled-color: rgba(0, 0, 0, 0.24); //isable state color
-@border-radius-base: 0px; // major border radius
+@disabled-color: rgb(153, 153, 153); //isable state color
+@border-radius-base: 8px; // major border radius
 @border-color-base: #d9d9d9; // major border color
 @box-shadow-base: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05); // major shadow for layers
 
