--- a/styles/antd-custom.less
+++ b/styles/antd-custom.less
@@ -1,13 +1,13 @@
 @import '~antd/lib/style/themes/default.less';
 
-@primary-color: #006fee; // primary color for all components
+@primary-color: #51459e; // primary color for all components
 @link-color: #6aa1d1; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
 @error-color: #f5222d; // error state color
 @font-size-base: 16px; // major text font size
 @font-family: Prompt, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 @heading-color: rgb(0, 0, 0); // heading text color
 @text-color: rgb(0, 0, 0); // major text color
 @text-color-secondary: rgba(0, 0, 0, 0.66); // secondary text color
