--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&family=Prompt:wght@100;200;300;400;500;600;700;800&display=swap&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 :root {
-    --foreground-rgb: 255, 255, 255;
+    /* --foreground-rgb: 255, 255, 255; */
     /* --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
 
@@ -20,6 +22,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Prompt', sans-serif;
 }
 
 html,
